# nvim-config

./: Cargo.toml
src/: main.rs
