[package]
name = "nvim-config"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "nvc"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
dirs = "4.0.0"
enumflags2 = "0.7.1"
serde = {version="1.0.130",features=["derive"]}
serde_with = "1.10.0"
serde_yaml = "0.8.21"
toml = "0.5.8"
